--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>云音乐 API</title>
+    <title>Uniapp Music API</title>
 </head>
 
 <body>
-    <h1>云音乐 API</h1>
+    <h1>Uniapp Music API</h1>
     当你看到这个页面时,这个服务已经成功跑起来了~
     <a href="https://front-end-class.github.io/uniapp-music-back-code/">查看文档</a>
     <h2>例子:</h2>
